# spacecraft-telemetry-anomaly-detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mlflow.db  mlflow.test.db  pyproject.toml  pyrightconfig.json
.github/workflows/: build-collector-image.yml  build-ray-image.yml  build-training.yml  deploy.yml  test.yml
configs/: cloud.yaml  injection_profiles.json  local.yaml  test.yaml
deploy/api/: Dockerfile
deploy/collector/: Dockerfile
deploy/mlflow/: Dockerfile
deploy/ray/: Dockerfile  cluster_preprocess.yaml  cluster_score.yaml  cluster_score_cpu.yaml  cluster_train.yaml  cluster_train_cpu.yaml  cluster_tune.yaml
docs/: deployment.md
docs/architecture/: gcp.md  online-pruning-investigation.md
docs/assets/: CAPTURE.md
docs/reviews/: 003-feast-feature-store.md  007-mlflow-integration.md
feature_repo/: __init__.py  feature_store.yaml  registry.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
infra/: .terraform.lock.hcl  artifact_registry.tf  backend.tf  cloud_run.tf  cloud_sql.tf  collector_vm.tf  github_oidc.tf  gke.tf  iam.tf  kuberay.tf  main.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf  workload_identity.tf
scripts/: analyze_esa_anomalies.py  analyze_iss_channels.py  build_reference_profiles.py  cloud_drift.sh  cloud_preprocess.sh  cloud_score.sh  cloud_train.sh  cloud_tune.sh  diag_fix_test.py  diag_offline_replay.py  diag_scan_detections.py  diag_served_detection.py  diag_sse_count.py  diag_sse_timing.py  diag_sse_trace.py  diag_warm_check.py  diag_warmup_room.py  diagnose_channels.py  inspect_channel.py  profile_startup.py
src/spacecraft_telemetry/: __init__.py  cli.py
tests/: conftest.py  test_cli.py
(+186 files in other folders)
