[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacecraft-telemetry-ads"
version = "0.1.0"
description = "End-to-end ML infrastructure for real-time spacecraft telemetry anomaly detection"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=4.1,<5",
]
ml = [
    "torch>=2.0",
    "ray[tune]>=2.31,<3",
    "hyperopt>=0.2.7",
]
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
tracking = [
    "mlflow>=3.0,<4",
    "feast>=0.40,<1",
    "evidently>=0.4,<1",
]
gcp = [
    "google-cloud-storage>=2.10",
    "gcsfs>=2024.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
spacecraft-telemetry = "spacecraft_telemetry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spacecraft_telemetry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pyarrow.*", "pandas.*", "feast.*", "mlflow.*", "evidently.*", "ray.*", "gcsfs.*"]
ignore_missing_imports = true
